--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,67 @@
 body{
   background-color: aqua;
 }
+
+#navbar{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  padding-right: 40px;
+  opacity: 1;
+  background-color: #d8e6e6;
+}
+
+.container-fluid{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+#button_nav{
+  opacity: 0.8;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+#button_nav:hover{
+  opacity: 0.8;
+}
+.container-fluid{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#shop_logo{
+  background: url(online_shop_logo.jpg);
+  height: 200px;
+  width: 400px;
+  /* extended code */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 5px;
+}
+
+button{
+  height: 60px;
+  width: 200px;
+  background-color: whitesmoke;
+  border: 1px solid black;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+}
+button:hover{
+  background-color: #0443f1;
+  color: white;
+  transform: scale(1.1); 
+}
+
